--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
 p{
   font-size: 36px;
 }
+h1{
+  color: gold;
+  text-align: center;
+  font-family: serif;
+  font-size: 40px;
+}
+h2{
+  font-size: 32px;
+}
+body{
+  background-color: beige;
+}
